docs: update Colab notebook for journal version
- Fix repo URL: HMARL-SOC → HMARL-SOC-journal
- Use train_fast.py instead of deprecated train.py
- Add compute_table2.py and generate_figures.py steps
- Update description to reference IEEE Access

--- a/code/train_colab.ipynb
+++ b/code/train_colab.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "# 🛡️ HMARL-SOC Training\n",
-    "**Hierarchical Multi-Agent RL for SOC** — ITC-CSCC 2026\n",
+    "**Hierarchical Multi-Agent RL for SOC** — IEEE Access (journal extension of ITC-CSCC 2026)\n",
     "\n",
     "Runtime → Change runtime type → **GPU (T4)**"
    ]
@@ -28,8 +28,8 @@
    "metadata": {},
    "source": [
     "# Step 1: Clone repo & install\n",
-    "!git clone https://github.com/nutthakorn7/HMARL-SOC.git\n",
-    "%cd HMARL-SOC\n",
+    "!git clone https://github.com/nutthakorn7/HMARL-SOC-journal.git\n",
+    "%cd HMARL-SOC-journal/code\n",
     "!pip install -q torch gymnasium numpy pyyaml matplotlib tensorboard"
    ],
    "execution_count": null,
@@ -51,8 +51,8 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "# Step 3: Train! (10K episodes ~15 min on T4)\n",
-    "!python train.py --config configs/default.yaml --episodes 10000 --seed 42 --save-dir /content/checkpoints"
+    "# Step 3: Train! (10K episodes, uses train_fast.py for 7x speedup)\n",
+    "!python train_fast.py --config configs/default.yaml --episodes 10000 --seed 42 --save-dir /content/checkpoints"
    ],
    "execution_count": null,
    "outputs": []
@@ -61,12 +61,12 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "# Step 4: Multi-seed training (5 seeds for paper)\n",
+    "# Step 4: Multi-seed training (5 seeds for paper reproduction)\n",
     "for seed in [42, 123, 456, 789, 1024]:\n",
     "    print(f\"\\n{'='*60}\")\n",
     "    print(f\"Training seed {seed}\")\n",
     "    print(f\"{'='*60}\")\n",
-    "    !python train.py --config configs/default.yaml --episodes 10000 --seed {seed} --save-dir /content/checkpoints"
+    "    !python train_fast.py --config configs/default.yaml --episodes 10000 --seed {seed} --save-dir /content/checkpoints"
    ],
    "execution_count": null,
    "outputs": []
@@ -75,8 +75,8 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "# Step 5: Evaluate best model\n",
-    "!python evaluate.py --checkpoint /content/checkpoints/checkpoint_best.pt --episodes 1000"
+    "# Step 5: Compute Table II results\n",
+    "!python compute_table2.py"
    ],
    "execution_count": null,
    "outputs": []
@@ -85,7 +85,17 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "# Step 6: Download results\n",
+    "# Step 6: Generate all paper figures\n",
+    "!python generate_figures.py"
+   ],
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Step 7: Download results\n",
     "from google.colab import files\n",
     "import shutil\n",
     "shutil.make_archive('/content/hmarl_soc_results', 'zip', '/content/checkpoints')\n",
